apps/media/gluetun-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  labels:
    app: gluetun
  name: gluetun
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gluetun
  template:
    metadata:
      labels:
        app: gluetun
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/arch
                  operator: NotIn
                  values:
                  - arm64
      containers:
        - image: qmcgaw/gluetun
          name: gluetun
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
          ports:
            - containerPort: 8888
              name: http-proxy
            - containerPort: 8388
              name: shadowsocks-tcp
              protocol: TCP
            - containerPort: 8388
              name: shadowsocks-udp
              protocol: UDP
            - containerPort: 8000
              name: api
          volumeMounts:
            - name: dev-net-tun
              mountPath: "/dev/net/tun"
            - name: gluetun-config
              mountPath: /gluetun
      volumes:
        - name: dev-net-tun
          hostPath:
            path: /dev/net/tun
        - name: gluetun-config
          persistentVolumeClaim:
            claimName: gluetun-config
