apps/media/qbittorrent-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  labels:
    app: qbittorrent-vpn
  name: qbittorrent-vpn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent-vpn
  template:
    metadata:
      labels:
        app: qbittorrent-vpn
        api: gluetun
    spec:
      imagePullSecrets:
        - name: regcred
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/arch
                  operator: NotIn
                  values:
                  - arm64
      containers:
        - name: gluetun-sync
          image: harbor.local.abbottland.io/library/gluetun-sync:latest
          imagePullPolicy: Always
          resources: {}
          ports:
            - containerPort: 4000
              hostPort: 4000
              name: sync-api
              protocol: TCP
        - name: curl-container
          image: quay.io/curl/curl:latest
          command: ["sleep", "infinity"]
          resources: {}

        - image: qmcgaw/gluetun
          name: gluetun
          resources: {}
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
          ports:
            - containerPort: 8000
              hostPort: 8000
              name: api
              protocol: TCP
            - containerPort: 8888
              hostPort: 8888
              name: http-proxy
              protocol: TCP
            - containerPort: 8388
              name: shadowsocks-tcp
              protocol: TCP
            - containerPort: 8388
              name: shadowsocks-udp
              protocol: UDP
          volumeMounts:
            - name: dev-net-tun
              mountPath: "/dev/net/tun"
            - name: gluetun-config
              mountPath: /gluetun

        - image: lscr.io/linuxserver/qbittorrent:latest
          name: qbittorrent
          resources: {}
          ports:
            - containerPort: 8080
              name: web
            - containerPort: 6881
              name: torrents
          volumeMounts:
            - name: media-downloads
              mountPath: "/downloads"
            - name: qbit-config
              mountPath: /config
      volumes:
        - name: dev-net-tun
          hostPath:
            path: /dev/net/tun
        - name: gluetun-config
          persistentVolumeClaim:
            claimName: gluetun-config
        - name: media-downloads
          persistentVolumeClaim:
            claimName: media-downloads
        - name: qbit-config
          persistentVolumeClaim:
            claimName: qbit-config
