apps/media/radarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radarr
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy: {}
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - image: lscr.io/linuxserver/radarr:latest
        name: radarr
        volumeMounts:
          - name: radarr-config
            mountPath: /config
          - name: media-pvc
            mountPath: "/data"
        resources: {}
        ports:
          - containerPort: 7878
            hostPort: 7878
            name: httpa
            protocol: TCP
          
      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: media-pvc
          persistentVolumeClaim:
            claimName: media-pvc
