apps/media/sonarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy: {}
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - image: lscr.io/linuxserver/sonarr:latest
        name: sonarr
        volumeMounts:
          - name: sonarr-config
            mountPath: /config
          - name: media-pvc
            mountPath: "/data"
        resources: {}
        ports:
          - containerPort: 8989
            hostPort: 8989
            name: httpa
            protocol: TCP
          
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: media-pvc
          persistentVolumeClaim:
            claimName: media-pvc
