apps/media/gluetun-service-http-proxy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gluetun-http-proxy
  namespace: media
  labels:
    api: gluetun
spec:
  ports:
    - port: 8888
      protocol: TCP
  selector:
    api: gluetun
