apps/media/gluetun-service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: gluetun-http
  namespace: media
  labels:
    app: gluetun
spec:
  ports:
    - port: 8000
      protocol: TCP
  selector:
    app: gluetun
