apps/media/gluetun-sync-service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: gluetun-sync
  namespace: media
  labels:
    api: gluetun
spec:
  ports:
    - port: 4000
      protocol: TCP
  selector:
    api: gluetun
