apps/media/prowlarr-service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
spec:
  ports:
    - port: 9696
      protocol: TCP
  selector:
    app: prowlarr
