apps/media/qbittorrent-service-torrent.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-torrents
  namespace: media
  labels:
    app: qbittorrent-vpn
spec:
  ports:
    - port: 6881
      protocol: TCP
  selector:
    app: qbittorrent-vpn
