apps/media/qbittorrent-service-ui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-ui
  namespace: media
  labels:
    app: qbittorrent
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: qbittorrent
