apps/media/radarr-service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  ports:
    - port: 7878
      protocol: TCP
  selector:
    app: radarr
