apps/media/gluetun-sync-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gluetun-sync
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,192.168.0.0/16,172.20.0.0/12,10.244.0.0/16
spec:
  ingressClassName: nginx
  rules:
  - host: gluetun-sync.local.abbottland.io
    http:
      paths:
      - backend:
          service:
            name: gluetun-sync
            port:
              number: 4000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - gluetun-sync.local.abbottland.io
    secretName: gluetun-sync-tls
